Fixed  console errors, resizes correctly on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,6 +13,7 @@ html, body, #root {
 
 .aboutPortrait {
   height: 275px;
+  max-height: 80%;
   border-radius: 100%;
   position: relative;
   top: 50%;
@@ -33,6 +34,19 @@ html, body, #root {
   background-repeat: no-repeat;
 }
 
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 
 .portraitBackground {
   background: url('../../public/portBack.jpg'); 
@@ -97,6 +111,23 @@ html, body, #root {
   left: 50%;
   max-height: 75%;
   max-width: 80%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  padding: 0 20px 0 20px;
+  border: 3px solid white;
+  text-align: left;
+  color: white;
+  font-size: 24px;
+  font-family: 'Ubuntu';
+  overflow: auto;
+}
+
+.sectionContainerMusic {
+  background-color: #12161e;
+  top: 50%;
+  left: 50%;
+  max-height: 75%;
+  width: 60%;
   position: absolute;
   transform: translate(-50%, -50%);
   padding: 0 20px 0 20px;
